fix z-index: history search!

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -797,7 +797,7 @@
   border-radius: 2px;
   box-shadow: 0 1px 6px #999;
   display: none;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__search-history-heading {
